--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,9 @@
     text-justify: inter-word;
     padding: 1em;
 }
+
+.video{
+    margin-top:4em;
+    display: flex;
+    justify-content: center;
+}
